2009-09-02  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* docs/gnuplot.doc docs/plotstyles.gnu demo/histerror.dat:
	Add a figure to the pdf documentation showing histogram with errorbars.

2009-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop):  When xtics (e.g.) were unset, then a new
	command 'set xtics ...' could lose track of the tic properties being set.
	Bug #2848433

2009-08-31  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* src/win/wpause.c src/wxterminal/gp_cairo.c:  Fix ambiguous syntax and
	bad format statement that generates compiler warnings.

2009-08-30  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  The cairo terminals need gp_cairo_helpers also.

2009-08-28  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* config/makefile.mgw:  Separate configuration flag CAIROTERMS for
	inclusion of pngcairo and pdfcairo terminals. 
	EAM - Share a CAIROLIBS flag for use by both WXT and CAIROTERMS.

2009-08-28  jpsa <john-aldridge@users.sourceforge.net>

	* src/win/wgraph.c:   Use printer open method recommended by 
	Microsoft knowledge base article 240082.

2009-08-28  Alexander Täschner <taschna@users.sourceforge.net>

	* src/win/winmain.c:  Avoid buffer overflow in MyPrintF and MyFPrintF.

2009-08-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphcs.c (boundary):  Fix bug #2845874
	(Rotated xtics caused misplacement of explicit bmargin).

2009-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breaders.c (png_filetype_function df_libgd_get_pixel)
	src/breaders.h src/datafile.c (df_open df_readbinary):
	If gnuplot has been linked with libgd (to support gif/png/jpeg) then
	we might as well use its ability to read in png images as binary data.
	New binary option for use with either rgbimage or rgbalpha
		plot 'foo.png' binary filetype=png

	* src/datafile.c (plot_option_binary):  Fix the logic that checks for a